# codequest

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  Rocket.toml  compose-dev.yml  compose.yml  shell.nix
bootstrap/: Cargo.toml  Dockerfile
bootstrap/src/: main.rs
common/: Cargo.toml
common/src/: credentials.rs  error.rs  event.rs  lib.rs  nats.rs  quest.rs  services.rs  statistics.rs  user.rs  username.rs
db-init/: 00-create-roles-and-schemas.sh
debug-quests/: quest-1.c  quest-2.c  quest-3.c  quest-4.c  quest-5.c  quest-6.c  quest-7.c  quest-8.c
example-quests/: Cargo.toml
example-quests/src/: lib.rs
gateway/: Cargo.toml  Dockerfile
gateway/src/: account.rs  auth.rs  main.rs  pages.rs  services.rs
progression-service/: Cargo.toml  Dockerfile
progression-service/migrations/: 0001_create_progression.sql
progression-service/src/: lib.rs  main.rs
quest-service/: Cargo.toml  Dockerfile
quest-service/migrations/: 0001_create_quests.sql  0002_add_quest_author.sql  0002_insert_debug_quests.sql  0002_insert_mock_quests.sql  0003_insert_example_quests.sql
quest-service/src/: lib.rs  main.rs  quest_context.rs
server/: Cargo.toml
server/src/: auth.rs  lib.rs  main.rs  pages.rs  services.rs
static/: about.html  about.html.hbs  account-statistics.html.hbs  account.html.hbs  answer.html.hbs  base.hbs  create-quest.html.hbs  edit-quest.html.hbs  index.html  index.html.hbs  login.html  login.html.hbs  navbar.hbs  puzzles.html.hbs  quest.html.hbs  quests.html.hbs  signup.html  signup.html.hbs  style.css
statistics-service/: Cargo.toml  Dockerfile
statistics-service/migrations/: 0001_create_statistics.sql
statistics-service/src/: lib.rs  main.rs
user-service/: Cargo.toml  Dockerfile
user-service/migrations/: 0001_create_quests.sql  0001_create_users.sql  0002_add_username_constraint.sql  0003_insert_mock_quests.sql
user-service/src/: lib.rs  main.rs
