[workspace]
resolver = "3"
members = ["common","gateway","quest-service","user-service","progression-service"]

[workspace.dependencies]
rocket = "0.5"
serde = "1.0"
argon2 = "0.5"
reqwest = "0.12"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate"] }
dotenv = "0.15"
