[workspace]
resolver = "3"
members = ["common", "gateway", "quest-service", "user-service", "progression-service", "statistics-service", "bootstrap"]

[workspace.dependencies]
rocket = "0.5"
serde = "1.0"
serde_json = "1.0"
argon2 = "0.5"
reqwest = "0.12"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate", "uuid"] }
dotenv = "0.15"
async-nats = "0.45"
uuid = { version = "1.19", features = ["serde", "v4"] }
base64 = "0.22"
rand = "0.9"
