[package]
name = "codequest-common"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { workspace = true, features = ["secrets"] }
serde = { workspace = true }
serde_json = { workspace = true }
argon2 = { workspace = true }
sqlx = { workspace = true }
async-nats = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
