[package]
name = "codequest-statistics-service"
version = "0.1.0"
edition = "2024"

[dependencies]
codequest-common = { path = "../common/" }
rocket = { workspace = true, features = ["json"] }
reqwest = { workspace = true, features = ["json"] }
sqlx = { workspace = true }
dotenv = { workspace = true }
